monero_libwallet2_api_c/src/main/cpp/wallet2_api_c.h


extern ADDAPI const char* MONERO_Wallet_publicMultisigSignerKey(void* wallet_ptr);
extern ADDAPI void MONERO_Wallet_stop(void* wallet_ptr);
extern ADDAPI bool MONERO_Wallet_store(void* wallet_ptr, const char* path);
extern ADDAPI const char* MONERO_Wallet_filename(void* wallet_ptr);
extern ADDAPI const char* MONERO_Wallet_keysFilename(void* wallet_ptr);
extern ADDAPI bool MONERO_Wallet_init(void* wallet_ptr, const char* daemon_address, uint64_t upper_transaction_size_limit, const char* daemon_username, const char* daemon_password, bool use_ssl, bool lightWallet, const char* proxy_address);
extern ADDAPI bool MONERO_Wallet_createWatchOnly(void* wallet_ptr, const char* path, const char* password, const char* language);
extern ADDAPI void MONERO_Wallet_setRefreshFromBlockHeight(void* wallet_ptr, uint64_t refresh_from_block_height);
extern ADDAPI uint64_t MONERO_Wallet_getRefreshFromBlockHeight(void* wallet_ptr);
extern ADDAPI void MONERO_Wallet_setRecoveringFromSeed(void* wallet_ptr, bool recoveringFromSeed);
extern ADDAPI void MONERO_Wallet_setRecoveringFromDevice(void* wallet_ptr, bool recoveringFromDevice);
extern ADDAPI void MONERO_Wallet_setSubaddressLookahead(void* wallet_ptr, uint32_t major, uint32_t minor);
extern ADDAPI bool MONERO_Wallet_connectToDaemon(void* wallet_ptr);
extern ADDAPI int MONERO_Wallet_connected(void* wallet_ptr);
extern ADDAPI void MONERO_Wallet_setTrustedDaemon(void* wallet_ptr, bool arg);
extern ADDAPI bool MONERO_Wallet_trustedDaemon(void* wallet_ptr);
extern ADDAPI bool MONERO_Wallet_setProxy(void* wallet_ptr, const char* address);
extern ADDAPI uint64_t MONERO_Wallet_balance(void* wallet_ptr, uint32_t accountIndex);
extern ADDAPI uint64_t MONERO_Wallet_unlockedBalance(void* wallet_ptr, uint32_t accountIndex);
extern ADDAPI uint64_t MONERO_Wallet_viewOnlyBalance(void* wallet_ptr, uint32_t accountIndex);
extern ADDAPI bool MONERO_Wallet_watchOnly(void* wallet_ptr);
extern ADDAPI bool MONERO_Wallet_isDeterministic(void* wallet_ptr);
extern ADDAPI uint64_t MONERO_Wallet_blockChainHeight(void* wallet_ptr);
extern ADDAPI uint64_t MONERO_Wallet_approximateBlockChainHeight(void* wallet_ptr);
extern ADDAPI uint64_t MONERO_Wallet_estimateBlockChainHeight(void* wallet_ptr);
extern ADDAPI uint64_t MONERO_Wallet_daemonBlockChainHeight(void* wallet_ptr);
extern ADDAPI uint64_t MONERO_Wallet_daemonBlockChainTargetHeight(void* wallet_ptr);
extern ADDAPI bool MONERO_Wallet_synchronized(void* wallet_ptr);
extern ADDAPI const char* MONERO_Wallet_displayAmount(uint64_t amount);
extern ADDAPI uint64_t MONERO_Wallet_amountFromString(const char* amount);
extern ADDAPI uint64_t MONERO_Wallet_amountFromDouble(double amount);
extern ADDAPI const char* MONERO_Wallet_genPaymentId();
extern ADDAPI bool MONERO_Wallet_paymentIdValid(const char* paiment_id);
extern ADDAPI bool MONERO_Wallet_addressValid(const char* str, int nettype);
extern ADDAPI bool MONERO_Wallet_keyValid(const char* secret_key_string, const char* address_string, bool isViewKey, int nettype);
extern ADDAPI const char* MONERO_Wallet_keyValid_error(const char* secret_key_string, const char* address_string, bool isViewKey, int nettype);
extern ADDAPI const char* MONERO_Wallet_paymentIdFromAddress(const char* strarg, int nettype);
extern ADDAPI uint64_t MONERO_Wallet_maximumAllowedAmount();
extern ADDAPI void MONERO_Wallet_init3(void* wallet_ptr, const char* argv0, const char* default_log_base_name, const char* log_path, bool console);
extern ADDAPI const char* MONERO_Wallet_getPolyseed(void* wallet_ptr, const char* passphrase);
extern ADDAPI const char* MONERO_Wallet_createPolyseed(const char* language);
extern ADDAPI void MONERO_Wallet_startRefresh(void* wallet_ptr);
extern ADDAPI void MONERO_Wallet_pauseRefresh(void* wallet_ptr);
extern ADDAPI bool MONERO_Wallet_refresh(void* wallet_ptr);
extern ADDAPI void MONERO_Wallet_refreshAsync(void* wallet_ptr);
extern ADDAPI bool MONERO_Wallet_rescanBlockchain(void* wallet_ptr);
extern ADDAPI void MONERO_Wallet_rescanBlockchainAsync(void* wallet_ptr);
extern ADDAPI void MONERO_Wallet_setAutoRefreshInterval(void* wallet_ptr, int millis);
extern ADDAPI int MONERO_Wallet_autoRefreshInterval(void* wallet_ptr);
extern ADDAPI void MONERO_Wallet_addSubaddressAccount(void* wallet_ptr, const char* label);
extern ADDAPI size_t MONERO_Wallet_numSubaddressAccounts(void* wallet_ptr);
extern ADDAPI size_t MONERO_Wallet_numSubaddresses(void* wallet_ptr, uint32_t accountIndex);
extern ADDAPI void MONERO_Wallet_addSubaddress(void* wallet_ptr, uint32_t accountIndex, const char* label);
extern ADDAPI const char* MONERO_Wallet_getSubaddressLabel(void* wallet_ptr, uint32_t accountIndex, uint32_t addressIndex);
extern ADDAPI void MONERO_Wallet_setSubaddressLabel(void* wallet_ptr, uint32_t accountIndex, uint32_t addressIndex, const char* label);
extern ADDAPI void* MONERO_Wallet_multisig(void* wallet_ptr);
extern ADDAPI const char* MONERO_Wallet_getMultisigInfo(void* wallet_ptr);
extern ADDAPI const char* MONERO_Wallet_makeMultisig(void* wallet_ptr, const char* info, const char* info_separator, uint32_t threshold);
extern ADDAPI const char* MONERO_Wallet_exchangeMultisigKeys(void* wallet_ptr, const char* info, const char* info_separator, bool force_update_use_with_caution);
extern ADDAPI const char* MONERO_Wallet_exportMultisigImages(void* wallet_ptr, const char* separator);
extern ADDAPI size_t MONERO_Wallet_importMultisigImages(void* wallet_ptr, const char* info, const char* info_separator);
extern ADDAPI size_t MONERO_Wallet_hasMultisigPartialKeyImages(void* wallet_ptr);
extern ADDAPI void* MONERO_Wallet_restoreMultisigTransaction(void* wallet_ptr, const char* signData);
extern ADDAPI void* MONERO_Wallet_createTransactionMultDest(void* wallet_ptr, const char* dst_addr_list, const char* dst_addr_list_separator, const char* payment_id,
                                                bool amount_sweep_all, const char* amount_list, const char* amount_list_separator, uint32_t mixin_count,
                                                int pendingTransactionPriority,
                                                uint32_t subaddr_account,
                                                const char* preferredInputs, const char* preferredInputs_separator);
extern ADDAPI void* MONERO_Wallet_createTransaction(void* wallet_ptr, const char* dst_addr, const char* payment_id,
                                                    uint64_t amount, uint32_t mixin_count,
                                                    int pendingTransactionPriority,
                                                    uint32_t subaddr_account,
                                                    const char* preferredInputs, const char* separator);
extern ADDAPI void* MONERO_Wallet_loadUnsignedTx(void* wallet_ptr, const char* unsigned_filename);
extern ADDAPI void* MONERO_Wallet_loadUnsignedTxUR(void* wallet_ptr, const char* input);
extern ADDAPI bool MONERO_Wallet_submitTransaction(void* wallet_ptr, const char* fileName);
extern ADDAPI bool MONERO_Wallet_submitTransactionUR(void* wallet_ptr, const char* input);
extern ADDAPI bool MONERO_Wallet_hasUnknownKeyImages(void* wallet_ptr);